--- a/todolist/package.json
+++ b/todolist/package.json
@@ -12,7 +12,10 @@
     "@types/react-dom": "^18.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "typescript": "^4.9.5",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
@@ -42,6 +45,9 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.34",
+    "@types/redux": "^3.6.0",
+    "@types/redux-persist": "^4.3.1",
     "@types/uuid": "^10.0.0"
   }
 }
